lab6/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
