lab6/pod-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend

spec:
   containers:
     - name: frontend
       image: nginx:alpine
       ports:
         - containerPort: 80
